Correct align-items

--- a/web/themes/custom/sand/sass/5-organisms/_header.scss
+++ b/web/themes/custom/sand/sass/5-organisms/_header.scss
@@ -175,7 +175,7 @@
     }
 
     .tbm-link-container {
-      align-items: baseline;
+      align-items: stretch;
       background-color: $white;
 
       &:hover,
